# streamable-db-mcp-server

./: .dockerignore  .gitignore  Cargo.toml  DOCKER_FEATURES.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README-REAL-MULTI-ENV.md  README.md  REAL-ENVIRONMENT.md  VALIDATION_REPORT.md  config.example.toml  docker-compose.dev.yml  docker-compose.yml  mcp-config-examples.md  quick-start.sh  setup-mcp.sh  start-real-multi-env.sh  stop-real-multi-env.sh  test-http-endpoints.sh  test-mcp-connection.sh  test-mcp-only.sh  test-mcp-protocol.sh  test-real-multi-env.sh  verify-real-setup.sh  verify-setup.sh
docker/: .env.development  .env.example  .env.staging  README-MULTI-ENV.md  README-REAL.md  README.md  build.sh  cleanup-real.sh  cleanup.sh  docker-compose.dev-only.yml  docker-compose.multi-env.yml  docker-compose.override.example.yml  docker-compose.staging.yml  health-check.sh  manage-environments.sh  start-multi-env.sh  start-real.sh  start.sh  test-multi-env.sh  test-real.sh  test.sh
docs/: MCP_TOOLS_REFERENCE.md  MIGRATION_GUIDE.md  README.md  TROUBLESHOOTING.md
examples/: README.md  enhanced_mcp_tools_demo.rs  environment_manager_demo.rs  list_environments_demo.js  list_environments_demo.py  list_environments_demo.sh
proptest-regressions/: query.txt
src/: config.rs  connection.rs  environment.rs  error.rs  lib.rs  main.rs  mcp_tools.rs  pool.rs  query.rs  router.rs  server.rs  streaming.rs
tests/: README.md  enhanced_mcp_tools_tests.rs  integration_tests.rs  multi_environment_integration_tests.rs  multi_environment_startup_test.rs  server_startup_tests.rs
(+11 files in other folders)
