[package]
name = "mysql-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.8", features = ["server", "macros", "transport-streamable-http-server"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "json", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
async-trait = "0.1"
warp = "0.3"
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.0"
tokio-test = "0.4"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"